[gd_scene load_steps=5 format=3 uid="uid://d0fhurmofa0n3"]

[ext_resource type="Script" path="res://player/player.gd" id="1_g3cum"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2im88"]
size = Vector2(22, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wcbc7"]
size = Vector2(20, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1oky3"]
size = Vector2(3, 28)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_mask = 6
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("1_g3cum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_2im88")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -32.0
offset_right = 11.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -31.0
offset_right = 10.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0.533333, 0, 0, 1)

[node name="AreaUp" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaUp"]
shape = SubResource("RectangleShape2D_wcbc7")

[node name="AreaDown" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDown"]
position = Vector2(0, 32)
shape = SubResource("RectangleShape2D_wcbc7")

[node name="AreaLeft" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaLeft"]
position = Vector2(-11, 16)
shape = SubResource("RectangleShape2D_1oky3")

[node name="AreaRight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRight"]
position = Vector2(11, 16)
shape = SubResource("RectangleShape2D_1oky3")
